Terminando calculo IMC

--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,6 @@
 /JavaApplication2/nbproject/private/
 /Calculadora/nbproject/private/
+/mediaAluno/nbproject/private/
+/mediaAluno/build/
+/imc/nbproject/private/
+/imc/build/
