Prova de java (cancelada)

--- a/.gitignore
+++ b/.gitignore
@@ -8,3 +8,5 @@
 /apostasMinadas/build/
 /ClassePessoa/nbproject/private/
 /ClassePessoa/build/
+/ProvaNr1Ariel/nbproject/private/
+/ProvaNr1Ariel/build/
