--- a/LocadoraBack/nbproject/private/private.properties
+++ b/LocadoraBack/nbproject/private/private.properties
@@ -1,2 +1,2 @@
 compile.on.save=true
-user.properties.file=C:\\Users\\TEMP\\AppData\\Roaming\\NetBeans\\19\\build.properties
+user.properties.file=C:\\Users\\TEMP.EDU_FIESC\\AppData\\Roaming\\NetBeans\\19\\build.properties
